--- a/style.css
+++ b/style.css
@@ -1,5 +1,75 @@
-*{
+* {
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+}
+
+header {
+    height: 100px;
+    background-color: #FFE600;
+    padding-inline: 10px;
+}
+
+.menu_superior {
+    display: flex;
+    justify-content: center;
+    padding-top: 8px;
+}
+
+.mercado_livre_logo{
+    background-color: transparent;
+    outline: 0;
+    border: 0;
+}
+
+.mercado_livre_logo img {
+    height: 34px;
+    width: 134px;
+}
+
+.barra_pesquisa {
+    height: 40px;
+    width: 40vw;
+    margin-inline: 8vw;
+}
+
+.barra_pesquisa input {
+    height: 40px;
+    width: 40vw;
+    text-indent: 12px;
+    font-size: 16px;
+    border: 0;
+    border-radius: 1px;
+    box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.2);
+}
+
+.barra_pesquisa input:focus{
+    outline: 1px solid blue;
+}
+
+.pesquisa img {
+    height: 21px;
+    width: 46px;
+}
+.pesquisa {
+    height: 40px;
+    width: 46px;
+    position: absolute;
+    left: 58.8vw;
+    border: 0;
+    border-left: 1px solid rgba(128, 128, 128, 0.5) ;
+    border-radius: 1px;
+    z-index: 2;
+    background-color: transparent;
+}
+
+.meli_logo {
+    background-color: transparent;
+    outline: 0;
+    border: 0;
+}
+
+.meli_logo img {
+    height: 39px;
+    width: 340px;
 }
