Modificado nav-mercado, criado nav-items, modificado css

--- a/style.css
+++ b/style.css
@@ -16,6 +16,103 @@ a {
 }
 
 .nav-mercado {
+    height: 100px;
+    width: 100vw;
     background-color: rgb(99, 168, 66);
     display: grid;
+    grid-template-columns: 1fr 2fr 1fr;
+    grid-template-rows: auto auto;
+    padding: 8px 10px 12px 10px;
+    grid-template-areas:
+        "logo search anuncio"
+        "nav-items nav-items nav-items";
+    grid-column-gap: 20px;
+    justify-content: center;
+    align-items: center;
+    grid-row-gap: 20px;
+    padding-right: 100px;
+    padding-left: 100px;
+}
+
+.logo-mercado {
+    background-color: transparent;
+    outline: 0;
+    border: 0;
+}
+
+.logo-mercado img {
+    height: 34px;
+    width: 134px;
+}
+
+.search{
+    display: flex;
+}
+.search input{
+    height: 40px;
+    width: 100%;
+    border: 0;
+    border-radius: 1px;
+    box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.2);
+    text-indent: 12px;
+    font-size: 16px;
+}
+
+.search input:focus {
+    outline: 1px solid blue;
+}
+
+
+.search img{
+    height: 21px;
+    width: 46px;
+}
+.search button{
+    height: 40px;
+    width: 46px;
+    margin-left: -46px;
+    background-color: transparent;
+    border: 0;
+    border-radius: 1px;
+    border-left: 1px solid rgba(128, 128, 128, 0.5);
+}
+.search button:focus {
+    outline: 1px solid blue;
+}
+
+.anuncio {
+    background-color: transparent;
+    outline: 0;
+    border: 0;
+    padding-left: 50px
+}
+
+.anuncio img {
+    height: 39px;
+    width: 340px;
+}
+
+.nav-items {
+    grid-area: nav-items;
+    display: flex;
+    justify-content: center;
+}
+
+.nav-items button{
+    height: 28px;
+    width: 86.2px;
+    display: flex;
+    background-color: transparent;
+    font-size: 14px;
+}
+
+.nav-items button img{
+    height: 40px;
+    width: 40px;
+    position: relative;
+}
+
+.nav-items button li{
+    display: flex;
+    flex-wrap: wrap;
 }
