Ajustado espaçamento no header

--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ a {
     width: 100vw;
     background-color: rgb(99, 168, 66);
     display: grid;
-    grid-template-columns: 1fr 2fr 1fr;
+    grid-template-columns: 1fr 3fr 1fr;
     grid-template-rows: auto auto;
     padding: 8px 10px 12px 10px;
     grid-template-areas:
@@ -96,6 +96,8 @@ a {
     grid-area: nav-items;
     display: flex;
     justify-content: center;
+    gap: 20px;
+    font-size: 14px;
 }
 
 .nav-items button{
@@ -104,15 +106,32 @@ a {
     display: flex;
     background-color: transparent;
     font-size: 14px;
+    border: 0;
+    left: 100px;
+    grid-area: nav-items;
+    margin-right: 90px;
+    margin-top: -15px;
 }
 
 .nav-items button img{
-    height: 40px;
-    width: 40px;
-    position: relative;
+    height: 27px;
+    width: 23px;
+    margin-left: -23px;
+    margin-top: -10px;
 }
 
 .nav-items button li{
     display: flex;
     flex-wrap: wrap;
+    font-size: 12px;
 }
+
+.nav-items button li a:nth-child(1){
+    color: rgba(0, 0, 0, 0.3);
+}
+
+.nav-items li:nth-child(9){
+    margin-right: 133px;
+}
+
+
