--- a/style.css
+++ b/style.css
@@ -45,10 +45,11 @@ a {
     width: 134px;
 }
 
-.search{
+.search {
     display: flex;
 }
-.search input{
+
+.search input {
     height: 40px;
     width: 100%;
     border: 0;
@@ -63,11 +64,12 @@ a {
 }
 
 
-.search img{
+.search img {
     height: 21px;
     width: 46px;
 }
-.search button{
+
+.search button {
     height: 40px;
     width: 46px;
     margin-left: -46px;
@@ -76,6 +78,7 @@ a {
     border-radius: 1px;
     border-left: 1px solid rgba(128, 128, 128, 0.5);
 }
+
 .search button:focus {
     outline: 1px solid blue;
 }
@@ -100,7 +103,7 @@ a {
     font-size: 14px;
 }
 
-.nav-items button{
+.nav-items button {
     height: 28px;
     width: 86.2px;
     display: flex;
@@ -109,29 +112,96 @@ a {
     border: 0;
     left: 100px;
     grid-area: nav-items;
-    margin-right: 90px;
+    margin-right: 50px;
     margin-top: -15px;
 }
 
-.nav-items button img{
+.nav-items button:hover li a{
+    color: black;
+}
+
+.nav-items button img {
     height: 27px;
     width: 23px;
     margin-left: -23px;
     margin-top: -10px;
 }
 
-.nav-items button li{
+.nav-items button li {
     display: flex;
     flex-wrap: wrap;
     font-size: 12px;
 }
 
-.nav-items button li a:nth-child(1){
+.nav-items button li a:nth-child(1) {
     color: rgba(0, 0, 0, 0.3);
 }
 
-.nav-items li:nth-child(9){
+.nav-items li:nth-child(9) {
     margin-right: 133px;
 }
 
+.nav-items li img {
+    height: 10px;
+    width: 10px;
+    position: relative;
+    margin-top: 2px;
+    margin-left: 4px;
+}
 
+.nav-items>li {
+    display: flex;
+    align-items: center;
+    position: relative;
+}
+
+.nav-items > li > a:hover{
+    color: rgba(0, 0, 0, 0.377);
+    transition: 0.5s;
+}
+
+.nav-items>a img {
+    height: 50px;
+    width: 30px;
+    position: absolute;
+    margin-top: -20px;
+}
+
+.dropdown-content{
+    display: none;
+    position: absolute;
+    z-index: 2;
+    margin-bottom: -840px;
+    background-color: #333333;
+    border-radius: 4px;
+}
+
+.dropdown-content a {
+    display: block;
+    padding: 9px 35px;
+    width: 250px;
+    color: white;
+}
+
+.dropdown-content > a:hover{
+    color: white;
+    background-color: #3483fa;
+}
+.dropdown-content a:first-child:hover {
+    background-color: transparent;
+    color: white;
+    cursor: default;
+}
+.triangulo-dropdown{
+    width: 0;
+    height: 0;
+    border-left: 20px solid transparent;
+    border-right: 20px solid transparent;
+    border-bottom: 20px solid #333333;
+    position: absolute;
+    margin-top: -20px;
+    margin-left: 25px;
+}
+.nav-items li:nth-child(2):hover .dropdown-content{
+    display: block;
+}
