Adicionado e finalizado o app.js

--- a/style.css
+++ b/style.css
@@ -570,7 +570,7 @@ body {
     padding-inline: 10px;
     flex: 0 0 15vw;
     margin-inline: 5px;
-    margin-top: 60px;
+    margin-top: 50px;
 }
 
 .produto-ofertado img {
@@ -627,7 +627,14 @@ body {
 
 .stars {
     display: flex;
+    position: absolute;
+    bottom: 10px;
+}
+
+.produto-oferta-dia .stars {
+    display: flex;
     margin-top: -4px;
+    position: static !important;
 }
 
 .star-item {
