--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ a {
 }
 
 body {
-    background-color: rgba(167, 167, 167, 0.493);
+    background-color: rgba(205, 205, 205, 0.452);
 }
 
 .nav-mercado {
@@ -425,13 +425,13 @@ body {
 
 .color-gradient {
     position: absolute;
-    height: 23vh;
+    height: 30vh;
     width: 100%;
     margin-top: 300px;
     background: linear-gradient(transparent,
             rgba(255, 255, 255, 0.82),
             rgb(231, 231, 231),
-            rgba(167, 167, 167, 0.164));
+            rgba(205, 205, 205, 0.099));
 }
 
 .nav-cards {
@@ -516,17 +516,17 @@ body {
 }
 
 .container-produtos {
-    height: 420px;
+    height: 50%;
     width: 100%;
     display: flex;
-    margin-top: 100px;
+    margin-top: 1%;
     justify-content: center;
 }
 
 .produto-oferta-dia {
-    background-color: rgb(224, 224, 224);
+    background-color: rgb(255, 255, 255);
     height: 100%;
-    width: 20%;
+    width: 16.5%;
     margin-right: 15px;
     display: flex;
     justify-content: center;
@@ -535,6 +535,7 @@ body {
     padding: 0 15px 0 15px;
     box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.2);
 }
+
 .produto-oferta-dia h2{
     position: absolute;
     margin-top: 13px;
@@ -555,11 +556,11 @@ body {
 
 .produto-ofertas {
     display: flex;
-    width: 50%;
+    width: 45%;
     justify-content: flex-start;
     overflow-x: auto;
     scroll-behavior: smooth;
-    background-color: rgb(224, 224, 224);
+    background-color: rgb(255, 255, 255);
     border-radius: 10px;
     box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.2);
 }
@@ -757,6 +758,41 @@ body {
         display: flex;
         padding-top: 250px;
     }
+    .produto-ofertas {
+        display: flex;
+        width: 61%;
+        justify-content: flex-start;
+        overflow-x: auto;
+        scroll-behavior: smooth;
+        background-color: rgb(255, 255, 255);
+        border-radius: 10px;
+        box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.2);
+    }
+    .produto-oferta-dia {
+        background-color: rgb(255, 255, 255);
+        height: 100%;
+        width: 20%;
+        margin-right: 15px;
+        display: flex;
+        justify-content: center;
+        align-content: center;
+        border-radius: 10px;
+        padding: 0 15px 0 15px;
+        box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.2);
+    }
+    .container-produtos {
+    height: 420px;
+    width: 100%;
+    display: flex;
+    margin-top: 4%;
+    justify-content: center;
+}
+
+.produto-oferta-dia .produto-ofertado img{
+    height: 220px;
+    width: 270px;
+    margin: 0 auto;
+}
 }
 
 .produto-ofertas h2 {
